--- a/project_1/part2.css
+++ b/project_1/part2.css
@@ -5,29 +5,30 @@ h1 {
 p {
 	text-align: center;
 	color: red;
-  margin: 20px;
-  margin-bottom: 200px;
+  margin: 5px;
+  margin-bottom: 80px;
+  padding: 2px;
 }
 
 img {
 	background-color: yellow;
 }
 .flex-rectangle{
-    width: %;
+    width: ;
     background: #00ffff;
-  margin: 50px;
-
+  margin: 250px;
+  margin-bottom:  150px;
     
 }
 .flex-rectangle:before{
     content: "";
     display: block;
-    padding-top: 2%;
+    padding-top: 5%;
+    margin: auto;
 }
 
 .circle-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  
   display: flex;
   margin:15px;
   padding:10px;
@@ -35,20 +36,26 @@ img {
  
 }
 .circle {
-  -webkit-box-flex: 0.09;
-      -ms-flex: 0.09;
-          flex: 0.09;
+  flex: 0.1;
+      /*-ms-flex: 0.1;*/
+  flex: 0.1;
+  background: #ffffff;
+  border-radius: 80%;
+  margin: auto;
+  padding: 10px;
+  /*display:flex; 
+  flex: .09;
   background: #ffffff;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 15px;*/
   
 }
 .circle:before {
   content: "";
   display: block;
   padding-top: 100%;
- 
+
   
 }
 
