--- a/project_1/part2.css
+++ b/project_1/part2.css
@@ -1,64 +1,169 @@
-h1 {
+body {
+	/*background-color: #ffffff;*/
+	background-image:url(paper.jpg);
+	/*z-index: 1;*/
+}
+
+.pic {
+      margin: auto;
+      z-index: -1;
+}
+
+#board {
+	padding: 2em;
+	background-color: #65F0F7;
+	margin: 75px auto;
+	border-radius: 3em;
+	display: none;
+}
+
+.column {
+	display: inline-block;
+	margin: 0 0.5em;
+}
+
+.space {
+	height: 5em;
+	width: 5em;
+	border-radius: 100%;
+	background-color: #ffffff;
+	/* Needs to be same color as body */
+	margin: 1em 0;
+	opacity: 0;
+}
+h1{
+  text-align: center;
+  font-size: 12;
+}
+
+h2{
+  text-align:center;
+  word-wrap: break-word;
+  color: red;
+}
+
+p {
 	text-align: center;
+	font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	line-height: 5em;
+	/*display: none;*/
+}
+
+#footer {
+	font-family: Georgia;
+}
+
+.empty {
+	color: #FFFFFF;
+}
+
+.player1 {
+	color: #D91C1C;
+	background-color: #D91C1C;
+}
+
+.player2 {
+	color: #000000;
+	background-color: #000000;
+	/*Can always try black*/
+}
+
+td {
+	text-align: center;
+	font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: #FFFFFF;
+	padding: 0.2em 0.5em;
+}
+
+.controls {
+	position: relative;
+	width: 6em;
+	margin: auto;
+	top: -7em;
+
+}
+
+
+
+/*h1 {
+	text-align: center;
+  
+  \\ Title centered \\
 }
 
 p {
 	text-align: center;
 	color: red;
-  margin: 5px;
-  margin-bottom: 80px;
-  padding: 2px;
+  margin: 20px;
+  margin-bottom: 200px;
+  
+  \\ paragraph centered \\
 }
 
-img {
-	background-color: yellow;
-}
-.flex-rectangle{
-    width: ;
+.flex-rectangle {
+    width: %;
     background: #00ffff;
-  margin: 250px;
-  margin-bottom:  150px;
-    
+  margin: 50px;
+  padding:5px;
+  
+ // light blue background //
 }
-.flex-rectangle:before{
+
+.flex-rectangle:before {
     content: "";
     display: block;
-    padding-top: 5%;
-    margin: auto;
+    padding-top: 2%;
 }
 
 .circle-wrap {
-  
   display: flex;
-  margin:15px;
-  padding:10px;
-  
- 
+	flex-wrap: wrap;
+	flex-grow: 1;
+	flex-shrink:1;
+	justify-content: center;
+    margin:15px;
+  // circle shape //
 }
+
 .circle {
-  flex: 0.1;
-      /*-ms-flex: 0.1;*/
-  flex: 0.1;
-  background: #ffffff;
-  border-radius: 80%;
-  margin: auto;
-  padding: 10px;
-  /*display:flex; 
+  display:flex; 
   flex: .09;
   background: #ffffff;
   border-radius: 50%;
   margin: auto;
-  padding: 15px;*/
+  padding: 10px;
+  
   
 }
 .circle:before {
   content: "";
   display: block;
-  padding-top: 100%;
-
+  padding-top: 100%; 
   
+}
+ 
+.black-chip  {
+  display: flex;
+  flex: .05;
+  border-radius: 50px;
+	width: 100px;
+	height: 100px;
+	background: black;
+	
+}
+
+.red-chip  {
+  display: flex;
+  flex: .05;
+  border-radius: 80px;
+  width: 100px;
+  height: 100px;
+  background: red;
 }
 
 
 
 
+
+
+*/
